# docsray-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MCP_REGISTRATION_PLAN.md  Makefile  PHASE1_SUMMARY.md  PROMPTS.md  README.md  ROADMAP.md  SYSTEM_INSTRUCTIONS.md  docker-compose-bisync-http-only.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest-docker.ini  test_new_features.py
.claude/: settings.local.json
.cursor/: .gitignore  mcp.example.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: docker.yml
docs/: README.md  api-reference.md  docker.md  docusaurus.config.js  netlify.toml  package-lock.json  package.json  quickstart.md  sidebars.js
docs/docs/: intro.md
docs/docs/advanced/: caching.md  performance.md  troubleshooting.md
docs/docs/api/: configuration.md  tools.md
docs/docs/getting-started/: configuration.md  how-it-works.md  installation.md  quickstart.md
docs/docs/providers/: comparison.md  llamaparse.md  overview.md  pymupdf.md
docs/docs/tools/: extract.md  map.md  peek.md  seek.md  xray.md
docs/src/components/HomepageFeatures/: index.js  styles.module.css
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
examples/docker/: docker-compose.production.yml
manage/: MCP_REGISTRATION.md  MCP_REGISTRATION_PLAN.md  MCP_REGISTRATION_PROJECT.md  PHASE1_SUMMARY.md  PUBLISHING.md  REFACTOR.2025.10.27.md  ROADMAP.md
scripts/: test-docker.sh
src/docsray/: __init__.py  cli.py  config.py  server.py
src/docsray/cli/: cache_manager.py
src/docsray/providers/: __init__.py  base.py  ibm_docling.py  llamaparse.py  mimic_docsray.py  pymupdf4llm.py  registry.py
src/docsray/tools/: __init__.py  extract.py  fetch.py  map.py  peek.py  search.py  seek.py  xray.py
src/docsray/utils/: __init__.py  cache.py  documents.py  llamaparse_cache.py  logging.py
tests/: conftest.py  conftest_docker.py
tests/files/: .gitignore
tests/integration/: test_docker.py  test_docker_simple.py  test_ibm_docling_integration.py  test_llamaparse_integration.py  test_new_tools.py  test_server.py  test_tools.py
tests/manual/: README.md  test_cache_system.py  test_enhanced_llamaparse.py  test_providers.py  test_with_env.py  test_xray.py
tests/mcp/: README.md  __init__.py  config.py  conftest.py  demo_client.py  mcp-use.config.json  mcp_use_helper.py  run_test_server.py  test_mcp_performance.py  test_mcp_tools.py  test_mcp_use.py  test_mcp_use_cli.py
tests/unit/: test_config.py  test_ibm_docling_provider.py  test_providers.py  test_utils.py
